@@ -412,9 +412,7 @@ ot_check_test (Gumbel_std)
 ot_check_test (GumbelFactory_std)
 ot_check_test (Histogram_std)
 ot_check_test (HistogramFactory_std)
-if (Boost_FOUND)
 ot_check_test (Hypergeometric_std)
-endif ()
 ot_check_test (InverseChiSquare_std)
 ot_check_test (InverseGamma_std)
 ot_check_test (InverseNormal_std)
@@ -520,9 +518,7 @@ ot_check_test (DistFunc_beta)
 ot_check_test (DistFunc_binomial)
 ot_check_test (DistFunc_discrete)
 ot_check_test (DistFunc_gamma)
-if (Boost_FOUND)
 ot_check_test (DistFunc_hypergeometric)
-endif ()
 ot_check_test (DistFunc_kfactor)
 ot_check_test (DistFunc_kolmogorov)
 ot_check_test (DistFunc_noncentralchisquare)
