@@ -487,9 +487,7 @@ ot_pyinstallcheck_test (GumbelCopula_std)
 ot_pyinstallcheck_test (GumbelCopulaFactory_std)
 ot_pyinstallcheck_test (Histogram_std)
 ot_pyinstallcheck_test (HistogramFactory_std)
-if (Boost_FOUND)
 ot_pyinstallcheck_test (Hypergeometric_std)
-endif ()
 ot_pyinstallcheck_test (IndependentCopula_std)
 ot_pyinstallcheck_test (InverseChiSquare_std)
 ot_pyinstallcheck_test (InverseGamma_std)
